INT-21371: In Snap change cover image cropper styles and fix top TOC display issue

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1765,6 +1765,9 @@ body.path-course-view, body#page-course-index-category {
         margin-top: -.75rem;
     }
 }
+body.path-course-view #moodle-page #page-header:not(.has-course-leftnav){
+  aspect-ratio: unset;
+}
 
 // Breadcrumb - not really a breadcrumb like on the web, but something moodley
 // -------------------------
@@ -4826,7 +4829,7 @@ button.snap-icon-toggle {
 }
 
 // Cover image control.
-.has-course-leftnav, #page-header.mast-image {
+.has-course-leftnav, #page-header.snap-category-header.mast-image {
     #page-mast {
         display: flex;
     }
